--- a/app/src/main/res/layout/activity_eye_cam.xml
+++ b/app/src/main/res/layout/activity_eye_cam.xml
@@ -47,38 +47,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-<!--        <ImageView-->
-<!--            android:layout_width="24dp"-->
-<!--            android:layout_height="24dp"-->
-<!--            android:src="@drawable/ic_eye_black"/>-->
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_eye_black"/>
 
-<!--        <ImageView-->
-<!--            android:layout_width="24dp"-->
-<!--            android:layout_height="24dp"-->
-<!--            android:src="@drawable/ic_eye_gray"-->
-<!--            android:layout_marginStart="16dp"/>-->
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_eye_gray"
+            android:layout_marginStart="16dp"/>
     </LinearLayout>
 
     <!-- 이미지 미리보기 -->
+
+    <!-- 앨범 & 카메라 버튼 -->
     <FrameLayout
         android:id="@+id/previewArea"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:background="#F0F0F0"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/eyeToggle"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/rounded_bg"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="16dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/eyeToggle">
 
-<!--        <ImageView-->
-<!--            android:layout_width="64dp"-->
-<!--            android:layout_height="64dp"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:src="@drawable/ic_star_gradient"/>-->
+        <ImageView
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_star_gradient" />
     </FrameLayout>
 
-    <!-- 앨범 & 카메라 버튼 -->
     <LinearLayout
         android:id="@+id/cameraOptions"
         android:layout_width="wrap_content"
@@ -97,10 +97,10 @@
             android:gravity="center"
             android:layout_marginEnd="32dp">
 
-<!--            <ImageView-->
-<!--                android:layout_width="48dp"-->
-<!--                android:layout_height="48dp"-->
-<!--                android:src="@drawable/ic_album"/>-->
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_album"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -116,10 +116,10 @@
             android:orientation="vertical"
             android:gravity="center">
 
-<!--            <ImageView-->
-<!--                android:layout_width="48dp"-->
-<!--                android:layout_height="48dp"-->
-<!--                android:src="@drawable/ic_camera"/>-->
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_camera"/>
 
             <TextView
                 android:layout_width="wrap_content"
