--- a/app/src/main/res/layout/activity_skin_cam.xml
+++ b/app/src/main/res/layout/activity_skin_cam.xml
@@ -36,7 +36,7 @@
         android:id="@+id/cameraTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="안구 AI 카메라"
+        android:text="피부 AI 카메라"
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="#000000"
