--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.PETDoc" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- 전체 앱 폰트 적용 -->
         <item name="android:fontFamily">@font/notosanskr_medium</item>
+        <item name="fontFamily">@font/notosanskr_medium</item> <!-- MaterialComponent 호환용 -->
     </style>
 
     <style name="Theme.PETDoc" parent="Base.Theme.PETDoc" />
