fix : 병합 버그 수정

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,10 @@
         <item name="android:fontFamily">@font/notosanskr_bold</item>
     </style>
 
+    <style name="Text">
+
+        <item name="android:fontFamily">@font/notosanskr_regular</item>
+    </style>
+
+
 </resources>
