--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,48 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <!-- 로고 텍스트 "PET Doc" -->
-
-    <!-- 산책 일지 아이콘 -->
-
-    <!-- Google 로그인 버튼 -->
     <ImageView
         android:id="@+id/logoTitle"
         android:layout_width="140dp"
         android:layout_height="26dp"
         android:layout_marginTop="156dp"
         android:src="@drawable/ic_pet_doc2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="60dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498" />
 
+    <!-- 산책 일지 아이콘 -->
     <ImageView
         android:id="@+id/walkLogIcon"
         android:layout_width="155dp"
         android:layout_height="106dp"
         android:layout_marginTop="32dp"
         android:src="@drawable/ic_walk_log"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logoTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="48dp"
-        app:layout_constraintTop_toBottomOf="@id/logoTitle" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Google 로그인 버튼 -->
     <ImageButton
         android:id="@+id/btn_google_login"
         android:layout_width="320dp"
         android:layout_height="55dp"
+        android:layout_marginBottom="96dp"
         android:src="@drawable/ic_google_button"
         android:background="?attr/selectableItemBackground"
         android:contentDescription="@string/desc_google_login"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="96dp" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
