--- a/app/src/main/res/layout/item_info_genetic.xml
+++ b/app/src/main/res/layout/item_info_genetic.xml
@@ -12,43 +12,44 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:padding="16dp">
 
-
-
-        <!-- 아이콘 이미지 -->
-        <ImageView
-            android:id="@+id/infoImage"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_marginEnd="12dp"
-            android:background="@drawable/ic_ai_star" />
-
-        <!-- 텍스트 묶음 -->
-        <LinearLayout
-            android:layout_width="0dp"
+        <!-- 상단 타이틀 -->
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:text="견종 2의 유전병 정보"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:textColor="#000000"
+            android:layout_marginBottom="12dp" />
 
-            <TextView
-                android:id="@+id/titleText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="견종 2의 유전병 정보"
-                android:textStyle="bold"
-                android:textSize="14sp"
-                android:textColor="#000000" />
+        <!-- 이미지와 설명 묶음 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
 
+            <ImageView
+                android:id="@+id/infoImage"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_marginEnd="12dp"
+                android:src="@drawable/ic_star_gradient"
+                android:scaleType="centerCrop"
+                android:backgroundTint="#DDDDDD"/>
             <TextView
                 android:id="@+id/descText"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="유전병 설명이 들어갑니다..."
+                android:layout_weight="1"
+                android:text="유전병 설명이 들어갑니다 줄이 길어지면 자동으로 크기에ㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁ"
+                android:maxLines="2"
                 android:textSize="12sp"
-                android:layout_marginTop="4dp"
-                android:textColor="#333333" />
+                android:textColor="#333333"
+                android:gravity="center_vertical" />
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
